# system-nix

./: .gitignore  .sops.yaml  AGENTS.md  ANTIGRAVITY.md  Brownbag.md  GEMINI.md  INSTALLATION.md  PERFORMANCE.md  README.md  SECRETS.md  flake.nix  formatter.nix  test.nu  treefmt.toml
.direnv/: flake-profile-2-link  flake-profile-3-link
.githooks/: pre-push
.github/workflows/: installer-iso.yml  neovim-lsp.yml  nix-flake-update.yml
checks/: deadnix.nix  formatting.nix  neovim-lsp-kotlin.nix  neovim-lsp-nix.nix  neovim-lsp-python.nix  neovim-lsp-typescript.nix  statix.nix
devShells/: node20.nix  node22.nix
devshells/: default.nix  node20.nix  node22.nix  node24.nix  sequence-platform-api.nix  sequence-web.nix
hosts/cwilliams-laptop/: configuration.nix  hardware-configuration.nix
hosts/cwilliams-work-laptop/: darwin-configuration.nix
hosts/installer/: configuration.nix
migrations/: 01-install-omniwm.md  03-setup-skhd.md  05-workspace-assignments.md  06-cross-platform-scripts.md
modules/darwin/: darwin-shared.nix  desktop.nix  determinate-nix.nix  kanata.nix  skhd.nix
modules/home/: README.md  fonts.nix  graphical-nixos.nix  home-shared.nix  personal-machine.nix  standalone.nix  theme.nix  work-machine.nix
modules/kanata/: global-leader.nix
modules/nixos/: README.md  audio.nix  cachyos.nix  gamemode.nix  graphical-environment.nix  host-shared.nix  nix-core.nix  nixos-shared.nix  personal-machine.nix
modules/theme/: default.nix
planning/: 01-domain-owned-scripts.md  02-domain-owned-shell-integrations.md  03-cli-ops-rebalance.md  04-desktop-graphical-nixos-consolidation.md  05-dev-language-toolchain-extraction.md  06-home-module-role-documentation.md  ai-debugger.md  ai-intentional-commits.md  devdoc-pipeline.md  espanso-sync.md  formatter-unification.md  ghostty-sync.md  logseq-capture-opt-in.md  omniwm-config-extraction.md  stable-script-packaging.md  stylix-darwin-release-warning.md  universal-quick-capture.md  windows-vm-host-install.md  zellij-shell-helper-dedupe.md
scripts/: bootstrap-macos
secrets/: secrets.yaml
templates/cpp/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  devshell.nix  flake.nix  justfile  treefmt.toml
templates/cpp/nix/checks/: default.nix
templates/cpp/nix/devshells/: default.nix
templates/cpp/src/: main.cpp
templates/cpp/tests/: .clang-tidy  example_test.cpp
(+296 files in other folders)
